# holiday-planner

./: .gitignore  DESIGN-OPTION-B.md  DESIGN_OPTION_C.md  config.py  planner.py  pyproject.toml  server.py  test_sources_live.py
agents/: orchestrator.py  prompts.py
data/: airport_codes.json  ferry_routes.json  island_info.json  port_codes.json
docs/: option-a-the-wanderlust-flow.md
models/: __init__.py  geo.py  trip.py
prototypes/: option-a-wanderlust.html  option-b-dealfinder.html  option-c-actionplan.html
public/: index.html
research/: cache.py  parallel.py  rate_limit.py
sources/accommodation/: airbnb_links.py  booking_client.py
sources/ferries/: ferryhopper_scraper.py  static_routes.py
sources/flights/: kiwi_client.py
templates/: itinerary.html.j2
tests/: test_models.py  test_pipeline.py  test_sources.py
trips/: greece-2026.yaml
